--- a/lp1.html
+++ b/lp1.html
@@ -167,3 +167,6 @@ E VEJA COMO RECUPERAR SEUS CABELOS! </h2> </div>
 <div class="elementor-element elementor-element-e8f08ac elementor-align-center elementor-mobile-align-justify botao elementor-widget elementor-widget-button" data-id="e8f08ac" data-element_type="widget" data-widget_type="button.default">
 <div class="elementor-widget-container">
 <div class="elementor-button-wrapper">
+	<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+function r(t,r){return Math.floor(Math.random()*(r-t+1)+t)}var interval=2e3,variation=5,c=r(700,900);document.getElementById("counter").textContent = c;setInterval(function(){var t=r(-variation,variation);c+=t;document.getElementById("counter").textContent = c;},interval);
+</script>
