--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	prefix="og: https://ogp.me/ns#" >
 <head>
 	<meta charset="UTF-8">
-		<title>video - blogmaisvoce</title>
+		<title>O FIM DA CALVÍCIE</title>
 
 		<!-- All in One SEO 4.2.0 -->
 		<meta name="description" content="Você e algumas pessoas próximas de foram selecionadas para conhecer esse segredo Seu cabelo não para de cair? PINGUE ISSO ABAIXO DA LINGUA TODOS OS DIAS AO ACORDAR E ANTES DE DORMIR E ELIMINE DE VEZ SUA CALVICIE Seu cabelo não para de cair? PINGUE ISSO ABAIXO DA LINGUA TODOS OS DIAS AO ACORDAR E ANTES" />
