--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ text-align: center;
 #division-mmuRXu1839300 {
 position: relative;
 padding: 1vh 20vw 3vh 20vw;
-background-color: #ffffff;
+background-color: #0000000;
 }
 @media (max-width:1200px) {
 #division-mmuRXu1839300 {
