--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ text-align: center;
 </style>
 <div class="headline-tpNYXf4737045-element headline">
 <h1>
-<b>APÓS SE DEMITIR</b>,&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>PROFESSORA</b></span></span>&nbsp;<b>DE PORTUGUÊS&nbsp;<span class="md"></span></b>, &nbsp;<b>DESCOBRIU COMO ENSINAR</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>SEU FILHO A LER</b></span></span>&nbsp;<b>COM UM MÉTODO SUÍÇO EM</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>4 SEMANAS</b></span></span>
+<b>MISTURA</b>,&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>SIMPLES E NATURAL</b></span></span>&nbsp;<b>É CAPAZ DE REVERTER&nbsp;<span class="md"></span></b>, &nbsp;<b>A</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>CALVÍCIE.</b></span></span>&nbsp;<b>PRIMEIROS RESULTADOS VISÍVEIS EM</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>4 SEMANAS</b></span></span>
 </h1>
 </div>
 </div>
@@ -128,7 +128,7 @@ text-align: center;
 </style>
 <div class="subheadline-uoGnzi7782157-element subheadline">
 <h2>
-Basta seguir esses passos&nbsp;<span style="color:#ffee00">descrito no vídeo, sem o b-a ba tradicional,</span>&nbsp;sem dor de cabeça...
+Basta seguir esses passos&nbsp;<span style="color:#ffee00">descrito no vídeo, usa ingredientes naturais</span>&nbsp;que você tem em casa...
 </h2>
 </div>
 </div>
