--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Mostrando 8 comentários
 </p>
 <div class="mb-2">
 <div class="flex w-full space-x-1 items-center font-[Helvetica]">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/kdQbDf8625652.jpeg" class="cursor-pointer rounded-full h-10 w-10">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/JvAi55nzkDfp2gRdjppz55Bo4x77ojQeDus8lWYi.jpg" class="cursor-pointer rounded-full h-10 w-10">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-[13px] leading-4 cursor-pointer hover:underline">
