--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ Mostrando 8 comentários
 </p>
 <div class="mb-2">
 <div class="flex w-full space-x-1 items-center font-[Helvetica]">
-<img src="https://assets.mycartpanda.com/youcenter/jpeg/JvAi55nzkDfp2gRdjppz55Bo4x77ojQeDus8lWYi.jpg" class="cursor-pointer rounded-full h-10 w-10">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/mhPY8h5txSsjCY4d8XGpxFlibsProYWmK89OP2Qh.jpg" class="cursor-pointer rounded-full h-10 w-10">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-[13px] leading-4 cursor-pointer hover:underline">
-Ana Maria G.
+José Silva G.
 </p>
 <p class="text-sm leading-4 pt-0.5">
 Tá todo mundo falando desse vídeo!!
@@ -261,11 +261,11 @@ Responder
 </div>
 <div class="mb-2">
 <div class="flex w-full space-x-1 items-center font-[Helvetica]">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/LQYfjg8670775.jpeg" class="cursor-pointer rounded-full h-10 w-10">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/GsEwuWfGXoH4unYnSvNvBLLjI2Twx6hC0RwBVL0v.jpg" class="cursor-pointer rounded-full h-10 w-10">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-[13px] leading-4 cursor-pointer hover:underline">
-Larissa Duarte
+Vinicius Pereira
 </p>
 <p class="text-sm leading-4 pt-0.5">
 Minha irmã de <span class="md"></span> que me deu a dicaa, deu muito certo aqui
@@ -302,11 +302,11 @@ Responder
 </div>
 <div class="border-l border-slate-300 border-dotted ml-5 sm:ml-12 pl-2 mb-2">
 <div class="flex w-full space-x-1 items-center">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/xRElcq8756774.jpeg" class="cursor-pointer rounded-full h-8 w-8">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/GsEwuWfGXoH4unYnSvNvBLLjI2Twx6hC0RwBVL0v.jpg" class="cursor-pointer rounded-full h-8 w-8">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
-Joana mari
+Joel Moura
 </p>
 <p class="text-sm leading-4 pt-0.5">
 Funcioana mesmo??
@@ -343,14 +343,14 @@ Responder
 </div>
 <div class="border-l border-slate-300 border-dotted ml-5 sm:ml-12 pl-2 mb-2">
 <div class="flex w-full space-x-1 items-center">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/LQYfjg8670775.jpeg" class="cursor-pointer rounded-full h-8 w-8">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/GsEwuWfGXoH4unYnSvNvBLLjI2Twx6hC0RwBVL0v.jpg" class="cursor-pointer rounded-full h-8 w-8">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
 Larissa Duarte
 </p>
 <p class="text-sm leading-4 pt-0.5">
-Olha aqui com meu filho ta dando superr certo, estou seguindo o passo a passo
+Olha aqui comigo ta dando superr certo, estou seguindo o passo a passo e melhorou minhas falhas
 </p>
 </div>
 </div>
