--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Responder
 </div>
 <div class="border-l border-slate-300 border-dotted ml-5 sm:ml-12 pl-2 mb-2">
 <div class="flex w-full space-x-1 items-center">
-<img src="https://assets.mycartpanda.com/youcenter/jpeg/GsEwuWfGXoH4unYnSvNvBLLjI2Twx6hC0RwBVL0v.jpg" class="cursor-pointer rounded-full h-8 w-8">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/QF1u5hnVs6kwS6tJfTxf2uJHEMFfBuPijhayQtGr.jpg" class="cursor-pointer rounded-full h-8 w-8">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
@@ -347,7 +347,7 @@ Responder
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
-Larissa Duarte
+Vinicius Pereira
 </p>
 <p class="text-sm leading-4 pt-0.5">
 Olha aqui comigo ta dando superr certo, estou seguindo o passo a passo e melhorou minhas falhas
@@ -384,14 +384,14 @@ Responder
 </div>
 <div class="mb-2">
 <div class="flex w-full space-x-1 items-center font-[Helvetica]">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/EGzkco8905282.jpeg" class="cursor-pointer rounded-full h-10 w-10">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/EwZzR6EbUjwKVhHlABWoJwrYhBohcPPMa03ZOeJB.jpg" class="cursor-pointer rounded-full h-10 w-10">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-[13px] leading-4 cursor-pointer hover:underline">
-Andreia Vasconcelos
+André Nogueira
 </p>
 <p class="text-sm leading-4 pt-0.5">
-Ainda bem que cheguei no final do vídeo! que dica maravilhosa, era justamente isso que a minha afilhada tava precisando! recomendo
+Ainda bem que cheguei no final do vídeo! que dica maravilhosa, era justamente isso que eu tava precisando! recomendo
 </p>
 </div>
 </div>
