--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@ Responder
 </div>
 <div class="border-l border-slate-300 border-dotted ml-5 sm:ml-12 pl-2 mb-2">
 <div class="flex w-full space-x-1 items-center">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/bEzbCd9104522.jpeg" class="cursor-pointer rounded-full h-8 w-8">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/GeyqG9WTixn3NTg2PD5b0uc6hyIhgWDp0gzED3oM.jpg" class="cursor-pointer rounded-full h-8 w-8">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
-Marlene Nasciment
+Marcio Oliveira
 </p>
 <p class="text-sm leading-4 pt-0.5">
-Obrigada pelo comentário.
+Obrigado pelo comentário! Vou testar tbm
 </p>
 </div>
 </div>
@@ -466,14 +466,14 @@ Responder
 </div>
 <div class="mb-2">
 <div class="flex w-full space-x-1 items-center font-[Helvetica]">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/rGAvCs9055284.jpeg" class="cursor-pointer rounded-full h-10 w-10">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/JvAi55nzkDfp2gRdjppz55Bo4x77ojQeDus8lWYi.jpg" class="cursor-pointer rounded-full h-10 w-10">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-[13px] leading-4 cursor-pointer hover:underline">
-Juliana cardoso
+Cesar Lemos
 </p>
 <p class="text-sm leading-4 pt-0.5">
-O mais incrível de tudo,é que várias professoras cobram um absurdo por algo que você entregou de graça! em 3 dias meu filho teve uma baita evolução Marlene, só tenho a agradecer primeiramente a Deus e depois VC! Estou amando aplicativo
+O mais incrível de tudo,é que várias empresas cobram um absurdo por algo que você entregou de graça! em 3 semanas já vejo uma baita evolução onde não tinha cabelo, só tenho a agradecer primeiramente a Deus e depois VC! Estou muito feliz
 </p>
 </div>
 </div>
@@ -507,14 +507,14 @@ Responder
 </div>
 <div class="border-l border-slate-300 border-dotted ml-5 sm:ml-12 pl-2 mb-2">
 <div class="flex w-full space-x-1 items-center">
-<img src="https://img.imageboss.me/atm/cdn/format:auto/u/StlMsITZzhTRIXt34Y17ulof2K12/l/bEzbCd9104522.jpeg" class="cursor-pointer rounded-full h-8 w-8">
+<img src="https://assets.mycartpanda.com/youcenter/jpeg/JvAi55nzkDfp2gRdjppz55Bo4x77ojQeDus8lWYi.jpg" class="cursor-pointer rounded-full h-8 w-8">
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
-Marlene Nasciment
+Maria Adenora
 </p>
 <p class="text-sm leading-4 pt-0.5">
-Fico feliz em fazer parte disso! conte comigo.
+Meu marido tbm seguiu tudo certinho e deu certo!
 </p>
 </div>
 </div>
