--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Responder
 Vinicius Pereira
 </p>
 <p class="text-sm leading-4 pt-0.5">
-Minha irmã de <span class="md"></span> que me deu a dicaa, deu muito certo aqui
+Minha irmã <span class="md"></span> que me deu a dicaa, deu muito certo aqui
 </p>
 </div>
 </div>
