--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ Responder
 <div class="flex w-full flex-col py-1 px-3 rounded-[18px] bg-stone-100">
 <div class="px-0.5 py-1">
 <p class="font-semibold text-[#365899] text-xs cursor-pointer hover:underline">
-Maria Adenora
+Maria Aldenora
 </p>
 <p class="text-sm leading-4 pt-0.5">
 Meu marido tbm seguiu tudo certinho e deu certo!
