--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ Responder
 Cesar Lemos
 </p>
 <p class="text-sm leading-4 pt-0.5">
-O mais incrível de tudo,é que várias empresas cobram um absurdo por algo que você entregou de graça! em 3 semanas já vejo uma baita evolução onde não tinha cabelo, só tenho a agradecer primeiramente a Deus e depois VC! Estou muito feliz
+O mais incrível de tudo,é que várias empresas cobram um absurdo por algo que você entregou aqui! Em 3 semanas já vejo uma baita evolução onde não tinha cabelo, só tenho a agradecer primeiramente a Deus e depois VC! Estou muito feliz
 </p>
 </div>
 </div>
