--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@ Privacidade
 </div>
 <p style="margin-top:24px;">
 </p>
-<script>
-          const pr = window.location.href + "/privacidade",
-            te = window.location.href + "/termos";
-            document.getElementById("p").setAttribute("href", pr), document.getElementById("t").setAttribute("href", te);
-</script>
+</section>
+
+    <footer class="bg-dark py-3 text-center">
+      <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+    </footer>
 </footer></div>
 </div>
 </div>
