--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ font-size: 1.65vw;
 text-align: center;
 padding-top: 2vh;
 padding-bottom: 2vh;
-color: #ffffff;
+color: #000000;
 line-height: 1.1;
 font-weight: 500;
 false
