--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ text-align: center;
 </style>
 <div class="headline-tpNYXf4737045-element headline">
 <h1>
-<b>MISTURA</b>,&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>SIMPLES E NATURAL</b></span></span>&nbsp;<b>É CAPAZ DE REVERTER&nbsp;<span class="md"></span></b>, &nbsp;<b>A</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>CALVÍCIE.</b></span></span>&nbsp;<b>PRIMEIROS RESULTADOS VISÍVEIS EM</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#000000"><b>4 SEMANAS</b></span></span>
+<b>MISTURA</b>,&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>SIMPLES E NATURAL</b></span></span>&nbsp;<b>É CAPAZ DE REVERTER&nbsp;<span class="md"></span></b>, &nbsp;<b>A</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>CALVÍCIE.</b></span></span>&nbsp;<b>PRIMEIROS RESULTADOS VISÍVEIS EM</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>4 SEMANAS</b></span></span>
 </h1>
 </div>
 </div>
