--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ text-align: center;
 </style>
 <div class="headline-tpNYXf4737045-element headline">
 <h1>
-<b>М​É​Т​О​D​О POCO CONOCIDO</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>REVELADO,</b></span></span>&nbsp;<b>​Е​L​I​М​I​Ν​А​ ​L​А​ ​С​А​Í​D​А&nbsp;<span class="md"></span></b>, &nbsp;<b>Y</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>​Р​R​О​D​U​С​Е​ ​Н​А​Ѕ​Т​А​ ​1​1​8​0​ ​Р​Е​L​О​Ѕ</b></span></span>&nbsp;<b>NUEVOS POR SEMANA</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b> </b></span></span>
+<b>М​É​Т​О​D​О POCO CONOCIDO</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>REVELADO,</b></span></span>&nbsp;<b>​Е​L​I​М​I​Ν​А​ ​L​А​ ​С​А​Í​D​А&nbsp;<span class="md"></span></b>&nbsp;<b>Y</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b>​Р​R​О​D​U​С​Е​ ​Н​А​Ѕ​Т​А​ ​1​1​8​0​ ​Р​Е​L​О​Ѕ</b></span></span>&nbsp;<b>NUEVOS POR SEMANA</b>&nbsp;<span style="background-color:#ffee00"><span style="color:#FF0000"><b> </b></span></span>
 </h1>
 </div>
 </div>
